--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.carterchen247.multiplepartprogressbar"
+        applicationId "com.pklotcorp.multipartprogressbar.demo"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -41,5 +41,5 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.13.1'
 
-    implementation project(":multiplepartprogressbar")
+    implementation project(':multipartprogressbar')
 }
