change package name, upload library to jcenter

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.carterchen247.multiplepartprogressbar"
+        applicationId "com.carterchen247.multiplepartprogressbar.demo"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
