--- a/multiplepartprogressbar/build.gradle
+++ b/multiplepartprogressbar/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id "com.jfrog.bintray" version "1.8.5"
+    id 'maven-publish'
 }
 
 android {
@@ -33,10 +35,47 @@ android {
 }
 
 dependencies {
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     testImplementation 'junit:junit:4.13.1'
+}
+
+def libraryGroupId = 'com.carterchen247'
+def libraryArtifactId = 'multiple-part-progressbar'
+def libraryVersion = '0.9.0'
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                from components.release
+                groupId = libraryGroupId
+                artifactId = libraryArtifactId
+                version = libraryVersion
+            }
+        }
+    }
+}
+
+bintray {
+    def bintrayUser = System.getenv('bintray_user')
+    def bintrayKey = System.getenv('bintray_key')
+    def repoName = System.getenv('bintray_repo')
+    user = bintrayUser
+    key = bintrayKey
+    publications = ['release']
+    publish = true
+    override = true
+    pkg {
+        repo = repoName
+        name = libraryArtifactId
+        userOrg = bintrayUser
+        publicDownloadNumbers = true
+        version {
+            name = libraryVersion
+            released = new Date()
+        }
+    }
 }
